# real_man

./: .gitignore  HOW_TO_RUN.md  README.md
scene_graph_generation/: .gitignore  README.md  pyproject.toml  requirements-host.txt  requirements.txt
scene_graph_generation/checkpoints/: README.md
scene_graph_generation/configs/: eval.yaml  train.yaml
scene_graph_generation/configs/callbacks/: cluster.yaml  cluster_nolr.yaml  lr_monitor.yaml
scene_graph_generation/configs/data/: sc+ar+sc+++ma+st.yaml  sc+ar+sc+++ma.yaml  sc+ar+sc++.yaml  sc+ar.yaml  sc.yaml  sc_segment3d_gathered.yaml
scene_graph_generation/configs/experiment/: train_opensegment3d_scannet.yaml  train_spunet_multidata.yaml  train_spunet_multidata_ppt.yaml  train_spunet_scannet.yaml  train_spunet_scannet_iter.yaml
scene_graph_generation/configs/logger/: auto_resume_wandb.yaml  wandb.yaml
scene_graph_generation/configs/model/: opensegment3d-pretrained_spunet34c.yaml  opensegment3d_spunet34c.yaml  spunet101+ppt.yaml  spunet101.yaml  spunet14a+ppt.yaml  spunet14a.yaml  spunet18a+ppt.yaml  spunet18a.yaml  spunet34c+msc.yaml  spunet34c+ppt.yaml  (+3 more)
scene_graph_generation/data/: README.md
scene_graph_generation/docker/: Dockerfile  docker_build.sh  docker_run.sh
scene_graph_generation/floor_pipeline/: README.md  __init__.py  config.building_1B.json  config.example.json  config.final_alligned.json  config.final_alligned_cleaned.json  process_full_floor.py  run_label_viewer.sh
scene_graph_generation/labels/: cv_dep_labels.txt  cv_dep_prompt_ensembles.json  robotics_lab_recommended_labels.txt
scene_graph_generation/mosaic3d_studio/: instance_clustering.py
scene_graph_generation/outputs/: README.md
scene_graph_generation/scripts/: infer_pointcloud.py  run_full_floor.sh  run_label_viewer.sh
scene_graph_generation/src/: eval.py  train.py
(+200 files in other folders)
